fixed images spacing on home page
changed the empty space to padding

--- a/public/css/general.css
+++ b/public/css/general.css
@@ -49,6 +49,8 @@ body {
 .jumboImage{
     max-height: 80px;
     max-width: 80px;
+    margin-right: 8px;
+    margin-left: 8px;
 }
 
 .footer {
